--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -1,21 +1,23 @@
 <modal [visible]="visible">
-    <material-dialog
-            headered
-            [class.white-header]="whiteHeader"
-            [class.fixed-height]="fixedHeight"
-            [class.fixed-width]="fixedWidth"
-            [class.small-padding]="smallPadding"
-            [error]="error">
+    <material-dialog headered
+                     [class.white-header]="whiteHeader"
+                     [class.fixed-height]="fixedHeight"
+                     [class.fixed-width]="fixedWidth"
+                     [class.small-padding]="smallPadding"
+                     [error]="error">
         <div header>
             <div class="flexContainer">
-                <img *ngIf="titleImageUrl != null" [src]="titleImageUrl" alt="title" />
+                <img *ngIf="titleImageUrl != null"
+                     [src]="titleImageUrl"
+                     alt="title" />
                 <h3 *ngIf="titleImageUrl == null && title != null">{{title}}</h3>
-                <div *ngIf="showCloseButton" id="closeButtonContainer">
-                    <material-button
-                            [class.color-white]="!whiteHeader"
-                            clear-size
-                            (trigger)="close()">
-                        <material-icon icon="close" size="x-large"></material-icon>
+                <div *ngIf="showCloseButton"
+                     id="closeButtonContainer">
+                    <material-button [class.color-white]="!whiteHeader"
+                                     clear-size
+                                     (trigger)="close()">
+                        <material-icon icon="close"
+                                       size="x-large"></material-icon>
                     </material-button>
                 </div>
             </div>
