--- a/lib/components/fo_number_input/fo_number_input_component.scss
+++ b/lib/components/fo_number_input/fo_number_input_component.scss
@@ -22,7 +22,6 @@ span#valueOutput
 material-button
 {
     -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+    -moz-user-select: none;-ms-user-select: none;
     user-select: none;
 }
