--- a/lib/components/fo_time_input/fo_time_input_component.html
+++ b/lib/components/fo_time_input/fo_time_input_component.html
@@ -2,18 +2,16 @@
     <label>{{label}}</label>
 </div>
 <div class="selectContainer">
-    <fo-select
-            [disabled]="disabled"
-            [sort]="false"
-            [options]="hourOptions"
-            [(selectedId)]="selectedHour">
+    <fo-select [disabled]="disabled"
+               [sort]="false"
+               [options]="hourOptions"
+               [(selectedId)]="selectedHour">
     </fo-select>
 </div>
 <div class="selectContainer">
-    <fo-select
-        [disabled]="disabled"
-        [sort]="false"
-        [options]="minuteOptions"
-        [(selectedId)]="selectedMinute">
+    <fo-select [disabled]="disabled"
+               [sort]="false"
+               [options]="minuteOptions"
+               [(selectedId)]="selectedMinute">
     </fo-select>
 </div>
