--- a/lib/components/fo_time_input/fo_time_input_component.scss
+++ b/lib/components/fo_time_input/fo_time_input_component.scss
@@ -1,15 +1,12 @@
-div.labelContainer
-{
+div.labelContainer {
     margin-bottom: 0.5rem;
-    label
-    {
+    label {
         font-size: 0.75em;
         color: #888;
     }
 }
 
-div.selectContainer
-{
+div.selectContainer {
     width: 3.5rem;
     text-align: center;
     display: inline-block;
