--- a/lib/components/fo_file_upload/fo_file_upload_component.scss
+++ b/lib/components/fo_file_upload/fo_file_upload_component.scss
@@ -1,20 +1,14 @@
 @import "package:grid/theme";
-
-:host
-{
-  div.container
-  {
-    border: 1px dashed #ccc;
-    padding: 0.5rem;
-    text-align: center;
-
-    input
-    {
-      display: none;
+:host {
+    div.container {
+        border: 1px dashed #ccc;
+        padding: 0.5rem;
+        text-align: center;
+        input {
+            display: none;
+        }
+        p {
+            margin: 0.5rem 0;
+        }
     }
-    p
-    {
-      margin: 0.5rem 0;
-    }
-  }
 }
