--- a/lib/components/fo_modal/fo_modal_component.scss
+++ b/lib/components/fo_modal/fo_modal_component.scss
@@ -1,90 +1,67 @@
 @import 'package:grid/grid';
 @import 'package:grid/theme';
 @import 'package:angular_components/material_dialog/mixins';
-
-material-dialog.white-header
-{
-  @include material-dialog-header-color(#fff);
-
-  [header]
-  {
-    h3
-    {
-      color: #333;
+material-dialog.white-header {
+    @include material-dialog-header-color(#fff);
+    [header] {
+        h3 {
+            color: #333;
+        }
     }
-  }
 }
 
-material-dialog.small-padding
-{
-  @include material-dialog-body-padding($padding: 0.5rem);
-  @include material-dialog-header-padding($padding: 0.5rem);
-  @include material-dialog-footer-padding($padding: 0.5rem);
+material-dialog.small-padding {
+    @include material-dialog-body-padding($padding: 0.5rem);
+    @include material-dialog-header-padding($padding: 0.5rem);
+    @include material-dialog-footer-padding($padding: 0.5rem);
 }
 
-material-dialog
-{
-  min-width: 15rem;
-  max-width: 90vw;
-  margin-left: 5vw;
-  margin-right: 5vw;
-  max-height: 95vh;
-  text-align: left;
-
-  [header]
-  {
-    div.flexContainer
-    {
-      display: flex;
-
-      img
-      {
-        max-width: 90%;
-        max-height: 100px;
-        margin: 1rem auto;
-        align-self: flex-start;
-      }
-
-      h3
-      {
-        align-self: center;
-        margin-bottom: 0;
-      }
-
-      div#closeButtonContainer
-      {
-        flex: auto;
-        align-self: flex-start;
-        text-align: right;
-      }
+material-dialog {
+    min-width: 15rem;
+    max-width: 90vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    max-height: 95vh;
+    text-align: left;
+    [header] {
+        div.flexContainer {
+            display: flex;
+            img {
+                max-width: 90%;
+                max-height: 100px;
+                margin: 1rem auto;
+                align-self: flex-start;
+            }
+            h3 {
+                align-self: center;
+                margin-bottom: 0;
+            }
+            div#closeButtonContainer {
+                flex: auto;
+                align-self: flex-start;
+                text-align: right;
+            }
+        }
     }
-  }
-
-  ::ng-deep main
-  {
-    -webkit-overflow-scrolling: touch; // Smooth scrolling on tablets/phones
-    div.modal-content
-    {
-      //padding-bottom: 0.5rem;
+    ::ng-deep main {
+        -webkit-overflow-scrolling: touch; // Smooth scrolling on tablets/phones
+        div.modal-content {
+            //padding-bottom: 0.5rem;
+        }
     }
-  }
 }
 
-material-dialog.fixed-height
-{
-  height: 95vh;
-
-  div.modal-content
-  {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-  }
+material-dialog.fixed-height {
+    height: 95vh;
+    div.modal-content {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
 }
 
-material-dialog.fixed-width
-{
-  width: 95vw;
-  margin-left: 2.5vw;
-  margin-right: 2.5vw;
-  max-width: $maxWidth;
+material-dialog.fixed-width {
+    width: 95vw;
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
+    max-width: $maxWidth;
 }
