--- a/lib/components/fo_multi_select/fo_multi_select_component.scss
+++ b/lib/components/fo_multi_select/fo_multi_select_component.scss
@@ -1,20 +1,14 @@
-:host
-{
-    span.label
-    {
+:host {
+    span.label {
         width: 100%;
         display: inline-block;
         font-size: 0.75em;
         color: #888;
     }
-
-    .selectedValues
-    {
-      margin-top: 0.3rem;
+    .selectedValues {
+        margin-top: 0.3rem;
     }
-
-    ::ng-deep material-dropdown-select.full-width
-    {
-      width: 100%;
+    ::ng-deep material-dropdown-select.full-width {
+        width: 100%;
     }
 }
