--- a/lib/components/fo_select/fo_select_component.html
+++ b/lib/components/fo_select/fo_select_component.html
@@ -1,72 +1,74 @@
-<label (click)="setVisible(true)" *ngIf="label.isNotEmpty">
+<label (click)="setVisible(true)"
+       *ngIf="label.isNotEmpty">
     {{label}}
-    <material-icon
-            *ngIf="tooltip != null"
-            baseline
-            class="clickable"
-            (click)="tooltipModalVisible = true; $event.stopPropagation();"
-            icon="help_outline"
-            size="small">
+    <material-icon *ngIf="tooltip != null"
+                   baseline
+                   class="clickable"
+                   (click)="tooltipModalVisible = true; $event.stopPropagation();"
+                   icon="help_outline"
+                   size="small">
     </material-icon>
-    <material-icon
-            *ngIf="allowNullSelection && selectedId != null"
-            baseline
-            class="clickable color-alert"
-            icon="cancel"
-            size="small"
-            (click)="onSelect(null); $event.stopPropagation();">
+    <material-icon *ngIf="allowNullSelection && selectedId != null"
+                   baseline
+                   class="clickable color-alert"
+                   icon="cancel"
+                   size="small"
+                   (click)="onSelect(null); $event.stopPropagation();">
     </material-icon>
 </label>
 <div class="flex-container">
-    <material-dropdown-select
-            [class.full-width]="fullWidth"
-            [disabled]="disabled || selectionOptions == null"
-            [buttonText]="selectedModel == null ? nullSelectionButtonText : selectedModel.toString()"
-            [popupMatchInputWidth]="false"
-            [(visible)]="visible">
-        <div *ngIf="showSearch" header>
-            <material-select-searchbox
-                    [label]="msg.search()"
-                    [filterable]="selectionOptions">
+    <material-dropdown-select [class.full-width]="fullWidth"
+                              [disabled]="disabled || selectionOptions == null"
+                              [buttonText]="selectedModel == null ? nullSelectionButtonText : selectedModel.toString()"
+                              [popupMatchInputWidth]="false"
+                              [(visible)]="visible">
+        <div *ngIf="showSearch"
+             header>
+            <material-select-searchbox [label]="msg.search()"
+                                       [filterable]="selectionOptions">
             </material-select-searchbox>
         </div>
-        <material-select-dropdown-item
-                *ngFor="let option of selectionOptions.optionsList"
-                class="text-left"
-                (trigger)="onSelect(option.id)"
-                [selected]="option.id == selectedId">
+        <material-select-dropdown-item *ngFor="let option of selectionOptions.optionsList"
+                                       class="text-left"
+                                       (trigger)="onSelect(option.id)"
+                                       [selected]="option.id == selectedId">
             <span *ngIf="icon">
-                <material-icon baseline [icon]="option.toString()" size="large"></material-icon>
+                <material-icon baseline
+                               [icon]="option.toString()"
+                               size="large"></material-icon>
                 <span>&nbsp;</span>
             </span>
             <span>{{option.toString()}}</span>
         </material-select-dropdown-item>
     </material-dropdown-select>
 
-    <material-button
-            *ngIf="showActionButton && actionButtonText != null && actionButtonIcon == null"
-            class="button"
-            clear-size dense raised
-            [disabled]="disabled || selectionOptions == null || selectedId == null"
-            (trigger)="onActionButtonTriggerController.add(selectedId); onSelect(null);">
+    <material-button *ngIf="showActionButton && actionButtonText != null && actionButtonIcon == null"
+                     class="button"
+                     clear-size
+                     dense
+                     raised
+                     [disabled]="disabled || selectionOptions == null || selectedId == null"
+                     (trigger)="onActionButtonTriggerController.add(selectedId); onSelect(null);">
         {{actionButtonText}}
     </material-button>
 
     <!-- Icon has precedence over text -->
-    <material-button
-            *ngIf="showActionButton && actionButtonIcon != null"
-            class="button"
-            clear-size dense raised
-            [disabled]="disabled || selectionOptions == null || selectedId == null"
-            (trigger)="onActionButtonTriggerController.add(selectedId); onSelect(null);">
-        <material-icon *ngIf="actionButtonIcon != null" [icon]="actionButtonIcon" size="small"></material-icon>
+    <material-button *ngIf="showActionButton && actionButtonIcon != null"
+                     class="button"
+                     clear-size
+                     dense
+                     raised
+                     [disabled]="disabled || selectionOptions == null || selectedId == null"
+                     (trigger)="onActionButtonTriggerController.add(selectedId); onSelect(null);">
+        <material-icon *ngIf="actionButtonIcon != null"
+                       [icon]="actionButtonIcon"
+                       size="small"></material-icon>
     </material-button>
 </div>
 
-<fo-modal
-        title="{{msg.information()}}"
-        [whiteHeader]="true"
-        [(visible)]="tooltipModalVisible"
-        [showCloseButton]="true">
+<fo-modal title="{{msg.information()}}"
+          [whiteHeader]="true"
+          [(visible)]="tooltipModalVisible"
+          [showCloseButton]="true">
     <p>{{tooltip}}</p>
 </fo-modal>
