--- a/lib/components/fo_youtube_player/fo_youtube_player_component.scss
+++ b/lib/components/fo_youtube_player/fo_youtube_player_component.scss
@@ -1,22 +1,19 @@
-#youtube-player-wrapper
-{
-  position: relative;
-  padding-bottom: 56.25%; // 16:9
-  padding-top: 0;
-  height: 0;
-  overflow: hidden;
-  font-size: 0;
-
-  iframe
-  {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-    margin: 0;
-    padding: 0;
-    display: block;
-  }
+#youtube-player-wrapper {
+    position: relative;
+    padding-bottom: 56.25%; // 16:9
+    padding-top: 0;
+    height: 0;
+    overflow: hidden;
+    font-size: 0;
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+        margin: 0;
+        padding: 0;
+        display: block;
+    }
 }
