Fixed label for reset password token input

--- a/lib/components/fo_login/fo_login_component.html
+++ b/lib/components/fo_login/fo_login_component.html
@@ -69,7 +69,7 @@
              *ngIf="state == msg.reset_password()">
             <p>{{msg.reset_password_description()}}</p>
             <material-input [disabled]="client.loading"
-                            [label]="token"
+                            [label]="msg.token()"
                             floatingLabel
                             [(ngModel)]="token">
             </material-input>
