Fixed test set firstname

--- a/lib/components/fo_gdpr_form/fo_gdpr_form_component.html
+++ b/lib/components/fo_gdpr_form/fo_gdpr_form_component.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="row">
                             <div class="m6 col">
-                                <material-input label="{{Intl.message('firstname')}}*"
+                                <material-input label="{{firstname}}*"
                                                 floatingLabel
                                                 ngControl="firstname"
                                                 [(ngModel)]="model.firstname"
