--- a/lib/components/fo_gdpr_form/fo_gdpr_form_component.html
+++ b/lib/components/fo_gdpr_form/fo_gdpr_form_component.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="row">
                             <div class="m6 col">
-                                <fo-select label="{{msg.issue()}}*"
+                                <fo-select label="{{msg.issue(1)}}*"
                                            [sort]="false"
                                            [(selectedId)]="model.selected_issue"
                                            [options]="options">
