Quiz now outputs score/maxscore on completion

--- a/lib/components/fo_quiz/fo_question_component.html
+++ b/lib/components/fo_quiz/fo_question_component.html
@@ -23,7 +23,7 @@
 </fo-quiz>
 
 <div class="row"
-     *ngIf="model.multiSelect && currentChildQuiz == null">
+     *ngIf="model.multiSelect == true && currentChildQuiz == null">
     <div class="col text-center">
         <material-button raised
                          clear-size
