Added buttonColor input to FoQuizComponent

--- a/lib/components/fo_quiz/fo_option_component.html
+++ b/lib/components/fo_quiz/fo_option_component.html
@@ -1,5 +1,6 @@
 <material-button raised
-                 [class.selected]="model.selected"
+                 [class.unSelected]="!model.selected"
+                 [style.background-color]="buttonColor"
                  (trigger)="onSelect()"
                  [disabled]="disabled">
     {{model.label}}
