--- a/lib/components/fo_quiz/fo_option_component.scss
+++ b/lib/components/fo_quiz/fo_option_component.scss
@@ -1,20 +1,13 @@
 @import 'package:angular_components/css/material/material';
 @import 'package:angular_components/material_button/mixins';
 
-@mixin colorize($selector, $color) {
-    $raised: $selector + '[raised]';
-    @include button-background-color($raised, $color);
-    @include button-color($raised, $mat-white);
-  
-    $not-raised: $selector + ':not([raised])';
-    @include button-color($not-raised, $color);
-  }
-
 :host {
     material-button {
-        float: right;
+        color: white;
+        float: right;        
     }
-    @include colorize("material-button.selected", $mat-blue);
-    
-    
+    material-button.unSelected {
+        color: inherit;
+        background-color: white !important;
+    }
 } 
