Added small margin to multi-select quiz

--- a/lib/components/fo_quiz/fo_question_component.html
+++ b/lib/components/fo_quiz/fo_question_component.html
@@ -23,7 +23,7 @@
          (done)="onChildQuizDone($event)">
 </fo-quiz>
 
-<div class="row"
+<div class="row margin-top-small"
      *ngIf="model.multiSelect == true && currentChildQuiz == null">
     <div class="col text-center">
         <material-button raised
