Fixed issue with data table description

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -254,5 +254,5 @@
           [whiteHeader]="true"
           [(visible)]="infoModalOpen"
           [showCloseButton]="true">
-    <p>{{msg.description()}}</p>
+    <p>{{description}}</p>
 </fo-modal>
