Made foSelect label not wrap

--- a/lib/components/fo_multi_select/fo_multi_select_component.scss
+++ b/lib/components/fo_multi_select/fo_multi_select_component.scss
@@ -2,7 +2,8 @@
     span.label {
         width: 100%;
         display: inline-block;
-        font-size: 0.75em;
+        white-space: nowrap;
+        font-size: 0.75em;    
         color: #888;
     }
     .selectedValues {
