--- a/lib/components/fo_select/fo_select_component.scss
+++ b/lib/components/fo_select/fo_select_component.scss
@@ -4,6 +4,7 @@
     label {
         width: 100%;
         display: inline-block;
+        white-space: nowrap;        
         font-size: 0.75em;
         color: #888;
         margin-top: 5px;
