--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal-content" #contentContainer>
+        <div class="modal-content">
             <ng-content></ng-content>
         </div>
         <div footer>
