--- a/lib/components/fo_select/fo_select_component.html
+++ b/lib/components/fo_select/fo_select_component.html
@@ -1,5 +1,6 @@
 <label (click)="setVisible(true)"
-       *ngIf="label.isNotEmpty">
+       *ngIf="label.isNotEmpty"
+       [class.dark-theme]="darkTheme">
     {{label}}
     <material-icon *ngIf="tooltip != null"
                    baseline
@@ -18,10 +19,12 @@
 </label>
 <div class="flex-container">
     <material-dropdown-select [class.full-width]="fullWidth"
+                              [class.dark-theme]="darkTheme"
                               [disabled]="disabled || selectionOptions == null"
                               [buttonText]="selectedModel == null ? nullSelectionButtonText : selectedModel.toString()"
                               [popupMatchInputWidth]="false"
-                              [(visible)]="visible">
+                              [(visible)]="visible"
+                              darkTheme>
         <div *ngIf="showSearch"
              header>
             <material-select-searchbox [label]="msg.search()"
