--- a/lib/components/fo_select/fo_select_component.scss
+++ b/lib/components/fo_select/fo_select_component.scss
@@ -4,11 +4,14 @@
     label {
         width: 100%;
         display: inline-block;
-        white-space: nowrap;        
+        white-space: nowrap;
         font-size: 0.75em;
         color: #888;
         margin-top: 5px;
         margin-bottom: 5px;
+    }
+    label.dark-theme {
+        color: white;        
     }
     div.flex-container {
         display: flex;
@@ -18,6 +21,9 @@
         material-dropdown-select.full-width {
             flex: auto;
             width: 100%;
+        }
+        material-dropdown-select.dark-theme {
+            color: white;        
         }
         .button {
             margin-left: 0.5rem;
